Change for third round of surge photo changes labs

--- a/app/views/photo/choose-photo-method.html
+++ b/app/views/photo/choose-photo-method.html
@@ -3,7 +3,7 @@
 {% set hmpoTitle %}Get a digital photo{% endset %}
 
 {%- set photoCodeConditional -%}
-    <p>You'll need a <a href="/help/photo-with-a-code" target="_blank">photo with a code</a>. Enter the code to retrieve your photo.</p>
+    <p>You'll need a <a href="/help/photo-with-a-code" target="_blank" rel="opener">photo with a code</a>. Enter the code to retrieve your photo.</p>
 {%- endset -%}
 
 {% block mainContent %}
