--- a/app/views/photo/digital-photo.html
+++ b/app/views/photo/digital-photo.html
@@ -6,7 +6,11 @@
     <h1>{{ hmpoTitle }}</h1>
 
     <h2>Photo with a code</h2>
-    <p>Go to a photo shop or booth, and choose to get a code with your photo.</p>
+    <p>Choose to get a code when you get your photo taken either:</p>
+    <ul class="govuk-list govuk-list--bullet">
+        <li>in a photo booth</li>
+        <li>by a photographer in a photo specialiast shop</li>
+    </ul>
     <p>It’s simple to use in your online passport application.</p>
 
     <ol class="govuk-list govuk-list--number">
@@ -15,7 +19,7 @@
         <li>check your photo and submit it</li>
         <li>your photo will be added directly to your application</li>
     </ol>
-    <p>In a shop you can also get a digital photo taken by a photographer that is emailed to you.</p>
+    <p>In a photo shop, you can also get your digital photo emailed to you.</p>
 
 
     {{ govukInsetText({
@@ -25,6 +29,11 @@
     
     <h2>Take a digital photo at home</h2>
     <p>You'll need someone to help you take a photo using a digital camera, smartphone or tablet.</p>
+
+    {% call hmpoSidebar({ classes: "hmpo-sidebar__big-image" }) %}
+        <h2>Where to find your code</h2>
+        <img src="/public/images/printed-photo-code.jpg" alt="">
+    {% endcall %}
 
     {% call hmpoForm(ctx) %}
         {{ hmpoSubmit(ctx) }}
