futher changes for surge labs v3

--- a/app/views/help/about-our-services-gov-uk.html
+++ b/app/views/help/about-our-services-gov-uk.html
@@ -69,12 +69,12 @@
             <div class="govuk-grid-column-two-thirds">
                 <h1 class="govuk-heading-xl">{{ hmpoTitle }}</h1>
                 <p class="title-paragraph">How long your passport application takes depends on what you're applying for and which service you use.</p><br><br>
-                <h1 class="part-title">Passport application processing times</h1>
+                <h1 class="part-title">Current passport processing times in the UK</h1>
                 <div class="govuk-inset-text hmpo-inset-info">
-                    Demand for passports is likely to be high as travel restrictions ease. There may be delays and passport applications could take up to 10 weeks. 
-                    Check current processing times regularly for updates.
+                    Check current processing times regularly for updates. When demand for passport is high it could take up to 10 weeks to get a passport.
                 </div>
                 <p>How long your passport application takes depends on what you're applying for and which service you use.</p>
+                <p>Times for our standard service aren't guaranteed.</p>
                 <p>There are different turnaround times if you're applying <a href="https://www.gov.uk/overseas-passports">from another country</a>.</p>
             </div>
 
@@ -84,7 +84,7 @@
                     <thead class="govuk-table__head">
                         <tr class="govuk-table__row">
                         <th class="govuk-table__header"> </th>
-                        <th class="govuk-table__header">Standard £75.50</th>
+                        <th class="govuk-table__header">Standard online £75.50</th>
                         <th class="govuk-table__header">Fast Track £142</th>
                         <th class="govuk-table__header">Online Premium £177</th>
                         </tr>
@@ -127,7 +127,7 @@
                     <thead class="govuk-table__head">
                         <tr class="govuk-table__row">
                         <th scope="col" class="govuk-table__header"> </th>
-                        <th scope="col" class="govuk-table__header">Standard £49</th>
+                        <th scope="col" class="govuk-table__header">Standard online £49</th>
                         <th scope="col" class="govuk-table__header">Fast Track £122</th>
                         </tr>
                     </thead>
@@ -163,12 +163,19 @@
             
 
             <div class="govuk-grid-column-two-thirds">
-                <h1 class="part-title">If you've already applied</h1>
-                <p>You can <a href="https://www.gov.uk/track-passport-application">track your passport application</a>.</p>
+
+                <h1 class="part-title">How to apply</h1>
+                <p><a href="/start">Apply online</a> to use standard service.</p>
+                <p>You can also apply with a paper form from a <a href="https://www.postoffice.co.uk/branch-finder">Post Office</a>, but it costs £9.50 extra and make it take longer to get your new passport.</p>
+                <p>If you need a passport urgently, you can <a href="http://localhost:3000/urgent/urgent-start">find out more about the Online Premium or 1 week Fast Track service</a>.</p>
+
                 <h1 class="part-title">Urgent travel for compassionate reasons</h1>
                 <p>If you need a passport to travel urgently for medical treatment, or because a friend or family member is seriously ill or has died,
-                 <a href="https://www.gov.uk/passport-advice-line">call the passport adviceline</a>.</p>
-                {{ hmpoClose() }}
+                <a href="https://www.gov.uk/passport-advice-line">call the passport adviceline</a>.</p>
+                
+
+                <h1 class="part-title">If you've already applied</h1>
+                <p>You can <a href="https://www.gov.uk/track-passport-application">track your passport application</a>.</p>
             </div>
         </main>
     </div>
