--- a/app/views/index.html
+++ b/app/views/index.html
@@ -77,6 +77,11 @@
     <ul class="govuk-list">
         <li><a href="/public/images/download/Photos%20to%20use%20for%20upload.zip" download>Download photos</a></li>
     </ul>
+    <br>
+    <p>Modified Gov pages:</p>
+    <ul class="govuk-list">
+        <li><a target="_blank" href="/help/photos-for-passports-digital">Photo guidance page</a></li>
+    </ul>
 
     <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
 
