--- a/app/views/start.html
+++ b/app/views/start.html
@@ -64,9 +64,9 @@
                 {#<p><a href="../help/about-our-services-gov-uk" target="_blank">Check how long it will take to get your passport</a> before you apply.</p>#} 
                 
                 {# SLA content WITH 10 weeks reference #}            
-                <p><a href="../help/about-our-services-gov-uk" target="_blank">Check how long passport applications are taking</a> before you apply. It could take up to 10 weeks to get your passport.</p>
+                <p><a rel="opener" target="_blank" href="../help/about-our-services-gov-uk" target="_blank">Check how long passport applications are taking</a> before you apply. It could take up to 10 weeks to get your passport.</p>
 
-                <p>You can <a href="https://www.gov.uk/get-a-passport-urgently">get a passport urgently</a> if you need one sooner.</p>
+                <p>You can <a  href="https://www.gov.uk/get-a-passport-urgently">get a passport urgently</a> if you need one sooner.</p>
                 <p>Do not book travel until you have a valid passport - your new passport will not have the same number as your old one.</p>
 
                 <h2>Before you start</h2>
@@ -115,7 +115,7 @@
                         <a href="https://www.gov.uk/passport-fees">Passport fees</a>
                     </li>
                     <li>
-                        <a href="https://www.gov.uk/photos-for-passports">Get a passport photo</a>
+                        <a target="_blank" href="/help/photos-for-passports-digital">Get a passport photo</a>
                     </li>
                     <li>
                         <a href="https://www.gov.uk/changing-passport-information">Change your name or personal details on your passport</a>
