--- a/app/views/help/about-our-services-gov-uk.html
+++ b/app/views/help/about-our-services-gov-uk.html
@@ -167,7 +167,7 @@
                 <h1 class="part-title">How to apply</h1>
                 <p><a href="/start">Apply online</a> to use standard service.</p>
                 <p>You can also apply with a paper form from a <a href="https://www.postoffice.co.uk/branch-finder">Post Office</a>, but it costs £9.50 extra and make it take longer to get your new passport.</p>
-                <p>If you need a passport urgently, you can <a href="http://localhost:3000/urgent/urgent-start">find out more about the Online Premium or 1 week Fast Track service</a>.</p>
+                <p>If you need a passport urgently, you can <a href="https://www.gov.uk/get-a-passport-urgently">find out more about the Online Premium or 1 week Fast Track service</a>.</p>
 
                 <h1 class="part-title">Urgent travel for compassionate reasons</h1>
                 <p>If you need a passport to travel urgently for medical treatment, or because a friend or family member is seriously ill or has died,
