--- a/app/views/help/photos-for-passports-printed.html
+++ b/app/views/help/photos-for-passports-printed.html
@@ -215,7 +215,7 @@
                         <a href="https://www.gov.uk/countersigning-passport-applications">Countersigning passport applications and photos</a>
                     </li>
                     <li>
-                        <a href="https://www.gov.uk/apply-renew-passport">Apply online for a UK passport</a>
+                        <a href="/start">Apply online for a UK passport</a>
                     </li>
                     <li>
                         <a href="https://www.gov.uk/confirm-identity-online-for-passport-application">Confirm someone’s identity online for a passport application</a>
