--- a/app/views/help/photos-for-passports-digital.html
+++ b/app/views/help/photos-for-passports-digital.html
@@ -124,7 +124,7 @@
                 <p>Choose to get a <a href= "/help/photo-with-a-code" rel="opener" target="_blank">photo with a code</a> when you get your photo taken either:</p>
                 <ul class="govuk-list govuk-list--bullet">
                     <li>in a photo booth</li>
-                    <li>by a photographer in a photo specialiast shop (you can also get your digital photo emailed to you)</li>
+                    <li>by a photographer in a photo specialist shop (you can also get your digital photo emailed to you)</li>
                 </ul>
                 <p>In your passport application, simply enter the code to access your photo, and add it to your application.</p>
                 <div class="govuk-inset-text">
