--- a/app/views/photo/digital-photo.html
+++ b/app/views/photo/digital-photo.html
@@ -9,7 +9,7 @@
     <p>Choose to get a code when you get your photo taken either:</p>
     <ul class="govuk-list govuk-list--bullet">
         <li>in a photo booth</li>
-        <li>by a photographer in a photo specialiast shop</li>
+        <li>by a photographer in a photo specialist shop</li>
     </ul>
     <p>It’s simple to use in your online passport application.</p>
 
