minor bug fixes

--- a/app/views/help/about-our-services-gov-uk.html
+++ b/app/views/help/about-our-services-gov-uk.html
@@ -75,10 +75,10 @@
 
                 <p class="govuk-body-s">Contents</p>
                 <ul class="govuk-list govuk-list--dashed">
-                    <li><a href="">Current passport processing times in the UK</a></li>
-                    <li><a href="">How to apply</a></li>
-                    <li><a href="">Urgent travel for compassionate reasons</a></li>
-                    <li><a href="">If you’ve already applied</a></li>
+                    <li><a href="#">Current passport processing times in the UK</a></li>
+                    <li><a href="#">How to apply</a></li>
+                    <li><a href="#">Urgent travel for compassionate reasons</a></li>
+                    <li><a href="#">If you’ve already applied</a></li>
                 </ul>
 
 
