add recent lab archive

--- a/app/views/archive.html
+++ b/app/views/archive.html
@@ -36,6 +36,7 @@
     <h2>Surge photo changes</h2>
     <p>Lab days (remote labs)</p>
     <ul class="govuk-list govuk-list--bullet">
+        <li><a href="https://hmpo-210817-surge-changes-v3.herokuapp.com/">17 August 2021</a></li>
         <li><a href="https://hmpo-210713-surge-changes-v2.herokuapp.com/">13 July 2021</a></li>
         <li><a href="https://hmpo-210525-surge-changes.herokuapp.com/">25 May 2021</a></li>
     </ul>
